--- a/trangvesanpham.html
+++ b/trangvesanpham.html
@@ -65,7 +65,7 @@
 				  	<div style="font-size: 30px;">Bài viết nổi bật</div>
 				  	<!-- phần tin nổi bật -->
 				  	<div id="tinnong">
-				  		<div><a href="./baivietcuthe.html">Hội chợ cây giống năm 2020</a></div>
+				  		<div><a href="#">Hội chợ cây giống năm 2020</a></div>
 				  		<hr>
 				  		<div><a href="#">Những cây trồng hot nhất năm 2019</a></div>
 				  		<hr>
@@ -81,93 +81,19 @@
 	    </div>
 	    <!-- phần nội dung sản phẩm -->
 	    <div class="col-sm-9"  style="background-color:lavenderblush;">
-	    	<div class="row list">
-			  <div class="col-sm-4">
-			  	<div class="conten">
-			  		<img src="./img/cay-xa-lach.jpg">
-			  		<a href="./trangvesanpham.html"><center>Cây rau xà lách</center></a>
-			  		<p style="color: black;font-size: 14px;">Là loại cây để ăn sống ,dễ trồng,dễ chắm sóc,ít bị sâu bệnh</p>
-			  		<p>23.000đ</p>
-			  		<button type="button" class="btn btn-success">Mua ngay</button>
-			  	</div>
-			  </div>
-			  <div class="col-sm-4">
-			  	<div class="conten">
-			  		<img src="./img/cachua.jpg">
-			  		<a href="#"><center>Cây cà chua</center></a>
-			  		<p style="color: black;font-size: 14px;">Là loại cây để ăn sống ,dễ trồng,dễ chắm sóc,ít bị sâu bệnh</p>
-			  		<p>33.000đ</p>
-			  		<button type="button" class="btn btn-success">Mua ngay</button>
-			  	</div>
-			  </div>
-			  <div class="col-sm-4">
-			  	<div class="conten">
-			  		<img src="./img/cay-du-du-1.jpg">
-			  		<a href="#"><center>Cây đu đủ</center></a>
-			  		<p style="color: black;font-size: 14px;">Là loại cây để ăn sống ,dễ trồng,dễ chắm sóc,ít bị sâu bệnh</p>
-			  		<p>230.000đ</p>
-			  		<button type="button" class="btn btn-success">Mua ngay</button>
-			  	</div>
-			  </div>
+	    	<div class="sanpham" style="text-align: center;padding: 10px;">
+			 	<h1>Rau Xà Lách</h1>
+			 	<img src="./img/xalach.jpg"><!-- ảnh mô tả -->
+				<p>Mô tả:Là rau ngắn ngày,trồng từ 20-30 ngày là có thể thu hoạch,dễ trồng và ít sâu bệnh</p>
+				<img src="./img/unnamed.jpg"><!-- ảnh phần nội dung -->
+				<p>Cách chăm sóc:Về mật độ, khoảng cách trồng thích hợp cho xà lách: Cây cách nhau khoảng 15-20cm; hàng cách hàng khoảng 15-20cm. Mật độ 16.000-17.000cây/ 500m2 (32.000 - 34.000 cây/1 .000 m2).Khi cây có từ 2 - 3 lá thật, đem ra cấy, nên cấy vào lúc chiều mát. Cấy xong phun nước để cây chặt gốc.Lưu ý: Lượng cây cần dự trữ khoảng 10% với cây nhổ để cấy lại & và dự trữ khoảng 2 % với cây trồng trong khay để trồng dặm nhằm bảo đảm mật độ.Trồng dặm: Tiến hành kiểm tra và trồng dặm ngay sau trồng khoảng 2-3ngày cho những cây chết, bị bệnh. Dặm vào lúc chiều mát, dặm xong phải tới nước ngay.Sâu hại chính trên nhóm cây xà lách chủ yếu là sâu xanh, sâu khoang, sâu tơ, sâu xanh da láng. Với những loại sâu này nên sử dụng thuốc trừ sâu vi sinh phòng trị như BT, VI-BT, Dipel, Delfin, Amectin, Acmenovate;Thiamectin, Centari . . .Bệnh hại chủ yếu là chết cây con, thối nhũn, đốm vòng nên sử dụng Aliette, COC85, Ridomil, Monceren, Validacine, Physan, Norshel phun phòng trị. Chú ý quan sát sớm. Liều lượng phun có ghi trên bao bì sản phẩm, chú ý ngừng phun thuốc trước khi thu hoạch 8 - 10 ngày.Thu hoạch: Sau khi cấy ra ruộng trồng từ 35-40 ngày có thể thu hoạch, không để quá già làm giảm chất lượng sản phẩm, khi thu dùng dao cắt sát gốc.</p>
+				<!-- ảnh chào -->
+				<img src="./img/rau-xa-lach.jpg">
+				<p>Chúc các bạn thành công khi chăm sóc loại cây này.Thân ái !!</p>
+				<div style="display: flex;"><h2>Giá bán:</h2><h2>30.000đ</h2></div>
+				<button type="button" class="btn btn-success">Đặt hàng ngay</button>
 			</div>
-			<div class="row list">
-			  <div class="col-sm-4">
-			  	<div class="conten">
-			  		<img src="./img/nho_03.jpg">
-			  		<a href="#"><center>Cây nho nhật</center></a>
-			  		<p style="color: black;font-size: 14px;">Là loại cây để ăn sống ,dễ trồng,dễ chắm sóc,ít bị sâu bệnh</p>
-			  		<p>33.000đ</p>
-			  		<button type="button" class="btn btn-success">Mua ngay</button>
-			  	</div>
-			  </div>
-			  <div class="col-sm-4">
-			  	<div class="conten">
-			  		<img src="./img/dautay.jpg">
-			  		<a href="#"><center>Cây dâu tây Đà Lạt</center></a>
-			  		<p style="color: black;font-size: 14px;">Là loại cây để ăn sống ,dễ trồng,dễ chắm sóc,ít bị sâu bệnh</p>
-			  		<p>100.000đ</p>
-			  		<button type="button" class="btn btn-success">Mua ngay</button>
-			  	</div>
-			  </div>
-			  <div class="col-sm-4">
-			  	<div class="conten">
-			  		<img src="./img/khoaitay.jpg">
-			  		<a href="#"><center>Cây Khoai Tây Úc</center></a>
-			  		<p style="color: black;font-size: 14px;">Là loại cây để ăn sống ,dễ trồng,dễ chắm sóc,ít bị sâu bệnh</p>
-			  		<p>70.000đ</p>
-			  		<button type="button" class="btn btn-success">Mua ngay</button>
-			  	</div>
-			  </div>
-			</div>
-			<div class="row list">
-			  <div class="col-sm-4">
-			  	<div class="conten">
-			  		<img src="./img/raumui.jpg">
-			  		<a href="#"><center>Cây rau mùi </center></a>
-			  		<p style="color: black;font-size: 14px;">Là loại cây để ăn sống ,dễ trồng,dễ chắm sóc,ít bị sâu bệnh</p>
-			  		<p>20.000đ</p>
-			  		<button type="button" class="btn btn-success">Mua ngay</button>
-			  	</div>
-			  </div>
-			  <div class="col-sm-4">
-			  	<div class="conten">
-			  		<img src="./img/taonhat.jpg">
-			  		<a href="#"><center>Táo Nhật Bản</center></a>
-			  		<p style="color: black;font-size: 14px;">Là loại cây để ăn sống ,dễ trồng,dễ chắm sóc,ít bị sâu bệnh</p>
-			  		<p>120.000đ</p>
-			  		<button type="button" class="btn btn-success">Mua ngay</button>
-			  	</div>
-			  </div>
-			  <div class="col-sm-4">
-			  	<div class="conten">
-			  		<img src="./img/vaithieu.jpg">
-			  		<a href="#"><center>Vải Thiều Thanh Hà</center></a>
-			  		<p style="color: black;font-size: 14px;">Là loại cây để ăn sống ,dễ trồng,dễ chắm sóc,ít bị sâu bệnh</p>
-			  		<p>50.000đ</p>
-			  		<button type="button" class="btn btn-success">Mua ngay</button>
-			  	</div>
-			  </div>
-			</div>
+			
 	    </div>
   	</div>
   	<!-- phần footder -->
