--- a/baivietcuthe.html
+++ b/baivietcuthe.html
@@ -11,15 +11,19 @@
 	<!-- header-->
 	 <header>
 	 	<div class="row" style="margin-top: 15px;margin-left: 10px;">
-		 	<div class="col-sm-5" style="display: flex">
+		 	<div class="col-sm-4" style="display: flex">
 		 		<img  src="./img/logo.jpg" style="border-radius: 50%;justify-content: center;align-items: center;">
 		 	</div>
-	    	<div class="col-sm-7">
+	    	<div class="col-sm-6">
 	    		<center style="float: left;">
 	    		<p id="title">Đỗ Huy Garden Shop</p>
 	    		<p class="adress"> Địa chỉ:Thái Học-Bình Giang-Hải Dương</p>
 	    		<p class="adress"> Hotline: 0979 265 304</p>
 				</center>
+	    	</div>
+	    	<div  class="col-sm-2">
+	    		<span>Truy Cập Giỏ Hàng</span>
+	    		<svg style="width: 40px;cursor: pointer;" enable-background="new 0 0 512 512" id="Layer_1" version="1.1" viewBox="0 0 512 512" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g><g><path d="M207.9,455.7c-30.6,0-55.4-24.9-55.4-55.4c0-30.6,24.9-55.4,55.4-55.4c30.6,0,55.4,24.9,55.4,55.4    C263.4,430.9,238.5,455.7,207.9,455.7z M207.9,366c-18.9,0-34.3,15.4-34.3,34.3s15.4,34.3,34.3,34.3c18.9,0,34.3-15.4,34.3-34.3    S226.9,366,207.9,366z" fill="#6A6E7C"/><path d="M365,455.7c-30.6,0-55.4-24.9-55.4-55.4c0-30.6,24.9-55.4,55.4-55.4s55.4,24.9,55.4,55.4    C420.4,430.9,395.6,455.7,365,455.7z M365,366c-18.9,0-34.3,15.4-34.3,34.3s15.4,34.3,34.3,34.3s34.3-15.4,34.3-34.3    S383.9,366,365,366z" fill="#6A6E7C"/></g><path d="M419.7,360.7H153.2c-4.9,0-9.1-3.3-10.2-8.1L76.1,77.4H10.5C4.7,77.4,0,72.6,0,66.8s4.7-10.5,10.5-10.5   h73.9c4.9,0,9.1,3.3,10.2,8.1l21,86.4h385.8c3.6,0,6.9,1.8,8.8,4.8c1.9,3,2.3,6.7,0.9,10l-81.7,188.9   C427.7,358.2,423.9,360.7,419.7,360.7z M161.5,339.6h251.3l72.6-167.8H120.8L161.5,339.6z" fill="#6A6E7C"/></g></svg>
 	    	</div>
     	</div>
 	 </header>
@@ -84,7 +88,7 @@
 	    <div class="col-sm-9"  style="background-color:#d5ecab;">
 	    	<div class="sanpham" style="text-align:center;">
 	    	<h1>Hội chợ cây giống 2020</h1>
-	    	<img src="https://lh3.googleusercontent.com/proxy/EssC-hUUiH2PZ0FMTCP3SJ9iegYapDMQ-1htT5NrRvzpwn5AQBXZyiJ3aoz2iInuLgEJcnvufV69Duha0J2idudbR-ayW8KLlpyeg-tPGIQeWR2Y9aRKW-7SnaebJFM6BUiu5sO2vKkkismr03on_48HLEappnXbK8bm6f-kzuLWjJHu3-7Ed_1yH-TMEv33v6kMqlWAOb1T1WzPuNLV">
+	    	<img src="http://caycanhhaison.com/hinhanh/520/300/cay-canh-nam-dinh-6_2334_1382601378.jpg">
 	    	<!-- giới thiệu chung -->
 	    	<p>Hội chợ là nơi tiển lãm các lọa giống cây có năng suất cao,chống chọi cao với sâu bệnh và chất lượng đầu ra sản phâm tốt</p>>
 	    	<img src="https://photo-2-baomoi.zadn.vn/w1000_r1/2016_06_17_180_19643758/50d5f1a323e3cabd93f2.jpg">
